--- a/cv_08/dvora135_EMB-cv_08.tex
+++ b/cv_08/dvora135_EMB-cv_08.tex
@@ -256,7 +256,7 @@ Naměřené hodnoty jsou v~tabulce \ref{tab:nam}
     \hline
     &$\textrm{V}_\textrm{1}$[V]&$\textrm{A}_\textrm{1} $[A]&$\textrm{W}_\textrm{A} $[dílky]&$\textrm{U}_\textrm{3}$[V]&$\textrm{W}_\textrm{D}$ [W]&$\textrm{W}_\textrm{D}$ cos\,$\varphi$[1]\\\hline\hline
     Měřená hodnota&126&4,6&74&2,5&2781&0,51\\\hline
-    Přepočtená hodnota&&13,8&296&&927&\\\hline
+    Přepočtená hodnota&&13,8&296~W&&927&\\\hline
   \end{tabular}
   \caption{Naměřené hodnoty}
   \label{tab:nam}
