--- a/cv_10/dvora135_EMB-cv_10.tex
+++ b/cv_10/dvora135_EMB-cv_10.tex
@@ -185,7 +185,7 @@
 
 \section{Seznam použitých přístrojů}
 \label{chap:seznam_pristroju}
-\begin{table}[h!]
+\begin{table}[H]
   \begin{tabular}{ll}
         G & generátor funkcí Instek GFG-8020H\\
         ČV1 & číslicový multimetr GDM-8145, rozsah 2~V, přesnost \tpm (0,03 \% z údaje + 4 digity)\\
