--- a/cv_11/dvora135_EMB-cv_11.tex
+++ b/cv_11/dvora135_EMB-cv_11.tex
@@ -78,9 +78,9 @@
 %_____________________________|___________________________|_____________________________%
 %                             
 
-\newcommand{\nazev}{}                                                        %
+\newcommand{\nazev}{Číslicový osciloskop a generátor programovatelného průběhu}                                                        %
 \newcommand{\jmeno}{Jakub Dvořák}                                                     %
-\newcommand{\datum}{2.11.2020}                                                              %
+\newcommand{\datum}{12.11.2020}                                                              %
 %---------------------------------------------------------------------------------------%
 
 
