--- a/cv_11/dvora135_EMB-cv_11.tex
+++ b/cv_11/dvora135_EMB-cv_11.tex
@@ -182,7 +182,7 @@
     G&Generátor funkcí Agilent 33220A, rozsah 20~MHz, rozlišení 14~bit, 20~MSa/s\\
     P&Přípravek s nastavitelným kondenzátorem\\
     SONDA&Profesionální sonda\\
-
+    OSCILOSKOP&Osciloskop DSOX2002A, vstupní impedance 11~M\tohm , 2~pF
   \end{tabular}
 \end{table}
 
@@ -191,7 +191,7 @@
 \label{chap:teoreticky_uvod}
 Při přenosu signálu dochází k parazitním jevům. Na vstupu osciloskopu najdeme tedy nejen vstupní odpor o hodnotě 1~M\tohm , ale také kapacitu o hodnotě dané výrobcem, zpravidla 15~pF. Při zvyšování frekvence se nepřímo úměrně snižuje kapacitance vnitřního kondenzátoru a kondenzátoru je poté nižší napětí. Kompenzační kondenzátor v sondě je určen k tomu, aby se spolu s kapacitancí v~osciloskopu snižovala i kapacitance v sondě. Výsledný dělič napětí bude mít v~ideálním případě tedy stále stejný poměr. Pro výpočet hodnoty kapacity kompenzačního kondenzátoru v sondě můžeme použít následující vzorec:
 \begin{equation}
-  
+  \frac{R_p}{R_0} = \frac{C_0}{C_p} \leftarrow C_p=\frac{R_O}{R_p}\cdotC_0 = 1,2~pF.
 \end{equation}
 
 
