--- a/cv_11/dvora135_EMB-cv_11.tex
+++ b/cv_11/dvora135_EMB-cv_11.tex
@@ -197,7 +197,7 @@ Při přenosu signálu dochází k parazitním jevům. Na vstupu osciloskopu naj
 
 \section{Naměřené hodnoty}
 \label{chap:namerene_hodnoty}
-
+Naměřené hodnoty jsou zapsány v tabulkách níže.
 
 
 \section{Zpracování naměřených hodnot}
