--- a/cv_11/dvora135_EMB-cv_11.tex
+++ b/cv_11/dvora135_EMB-cv_11.tex
@@ -239,7 +239,7 @@ Naměřené hodnoty jsou zapsány v tabulce \ref{tab:hodnoty}.
   \centering
   \begin{tabular}{|c|c|}
     \hline
-    \multicolumn{2}{c}{BURST}\\\hline
+    \multicolumn{2}{|c|}{BURST}\\\hline
     překmit&587 mV\\\hline
   \end{tabular}
 \end{table}
