--- a/cv_11/dvora135_EMB-cv_11.tex
+++ b/cv_11/dvora135_EMB-cv_11.tex
@@ -232,7 +232,7 @@ Naměřené hodnoty jsou zapsány v tabulce \ref{tab:hodnoty}.
     Překmit&-&575 mV&35 mV\\\hline
   \end{tabular}
   \caption{Naměřené hodnoty}
-  \label{tab:hotnoty}
+  \label{tab:hodnoty}
 \end{table}
 
 \begin{table}[h!]
