--- a/cv_11/dvora135_EMB-cv_11.tex
+++ b/cv_11/dvora135_EMB-cv_11.tex
@@ -244,7 +244,7 @@ Naměřené hodnoty jsou zapsány v tabulce \ref{tab:hodnoty}.
   \end{tabular}
 \end{table}
 
-Níže jsou obrázky obrazovky při měření jednotlivých stavů.
+Níže jsou snímky obrazovky při měření jednotlivých stavů.
 
 \begin{figure}[h!]
   \centering
