--- a/cv_12/dvora135_EMB-cv_12.tex
+++ b/cv_12/dvora135_EMB-cv_12.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt]{article}   % papír A4, písmo 12 bodu
-\usepackage[utf8x]{inputenc}            %kodovaní UTF-8
+\usepackage[utf8]{inputenc}             %kodovaní UTF-8
 \usepackage{ucs}                        %kodovani unicode
 \usepackage[czech]{babel}               %podpora cestiny
 \usepackage[T1]{fontenc}                %pouzij variantu pisma T1 (hacky, carky)
