--- a/cv_12/dvora135_EMB-cv_12.tex
+++ b/cv_12/dvora135_EMB-cv_12.tex
@@ -200,7 +200,10 @@
 
 \section{Seznam použitých přístrojů}
 \label{chap:seznam_pristroju}
-
+\begin{enumerate}
+  \item Laboratorní zdroj Agilent
+  \item Digitální voltmetr HP
+\end{enumerate}
 
 
 \section{Teoretický úvod}
