--- a/cv_13/dvora135_EMB-cv_13.tex
+++ b/cv_13/dvora135_EMB-cv_13.tex
@@ -157,6 +157,11 @@
 
 %------------------------------------ VLASTNÍ TEXT ------------------------------------%
 
+\textit{tohle je italikou} \textbf{tohle je tučně} \underline{tohle je podtrženo}
+
+\section{blabla bla gkl}
+\subsection{bdfbshgkjdgnr}
+\subsubsection{ngjsngjrngjs,tng}
 
 
 \section{Úkol měření}
@@ -184,6 +189,22 @@
 
 \section{Schéma zapojení}
 \label{chap:schema_zapojeni}
+\begin{figure}[htbp]
+  \centering
+  \begin{minipage}{.4\textwidth}
+    \captionsetup{width=\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{ru.png}
+    \caption{Schéma zapojení pro převodník R $\rightarrow$ U}
+    \label{fig:ru} 
+  \end{minipage}
+  \begin{minipage}{.4\textwidth}
+    \captionsetup{width=.8\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{whu.png}
+  \end{minipage}
+\end{figure}
+
 
 
 
